# Doxen-AI-Voice

./: .gitignore  .replit  Dockerfile  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt  seed_data.py  start.sh  test_call_simulation.py
app/: main.py  router_loader.py
attached_assets/: Pasted--FINAL-DIAGNOSIS-Your-Twilio-call-shows-wss-doxen-ai-vo_1766280494492.txt  Pasted--GOOD-THIS-MEANS-twilio-voice-IS-NOW-WORKING-PERFECTLY-_1766261349223.txt  Pasted--ISSUE-1-TWILIO-NEVER-REACHES-YOUR-SERVER-THIS-is-why-y_1766118871746.txt  Pasted--NEW-DIAGNOSIS-Your-VM-deployment-is-running-but-the-Op_1766279062245.txt  Pasted--PHASE-6-REVISED-REAL-TIME-FULLY-GENERIC-HOME-SERVICES-_1765772594323.txt  Pasted--PHASE-7-12-THE-MASTER-PLAN-This-is-the-complete-bluepr_1765857925861.txt  Pasted--ROOT-CAUSE-FOUND-twilio-stream-IS-NOT-A-VALID-ENDPOINT_1766260782184.txt  Pasted--STOP-THIS-SCREENSHOT-CHANGES-EVERYTHING-Your-screensho_1766281930548.txt  Pasted--THE-REAL-PROBLEM-Finally-Confirmed-Your-new-Twilio-log_1766260111937.txt  Pasted--WE-NOW-KNOW-EXACTLY-WHAT-THE-PROBLEM-IS-Your-newest-Tw_1766261799008.txt  Pasted--What-the-new-error-really-means-Even-though-returns-20_1766105503868.txt  Pasted--YOU-CANNOT-PUT-A-wss-URL-INTO-THE-A-CALL-COMES-IN-WEBH_1765513421129.txt  Pasted-1-SYSTEM-OVERVIEW-High-Level-Architecture-The-platform-_1765341936617.txt  Pasted-Below-is-the-definitive-diagnosis-of-your-dead-air-prob_1766185216405.txt  Pasted-Cortana-is-officially-answering-live-phone-calls-speaki_1765600356010.txt  (+14 more)
frontend/: next.config.js  package-lock.json  package.json  (+1 more)
(+64 files in other folders)
